# djpoe

./: README.md  pyproject.toml
djpoe/: db.sqlite3  manage.py
djpoe/djpoe/: asgi.py  settings.py  urls.py  wsgi.py
djpoe/djpoe_app/: apps.py  urls.py  views.py
