[tool.poetry]
name = "djpoe"
version = "0.1.0"
description = ""
authors = ["may.thazin.htun <may.thazin.htun@frontiir.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = "^5.1.3"
django-types = "^0.19.1"
django-stubs-ext = "^5.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
